<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/background_login_form"
        android:layout_marginTop="@dimen/login_layout_top_margin"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_username_edittext_top_margin"
            android:layout_marginStart="@dimen/login_edittext_horizontal_margin"
            android:layout_marginEnd="@dimen/login_edittext_horizontal_margin"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_edittext_horizontal_margin"
            android:layout_marginEnd="@dimen/login_edittext_horizontal_margin"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/login_login_button_vertical_margin"
            android:layout_marginBottom="@dimen/login_login_button_vertical_margin"
            android:layout_marginStart="@dimen/login_login_button_horizontal_margin"
            android:layout_marginEnd="@dimen/login_login_button_horizontal_margin"
            android:background="@drawable/btn_normal"
            android:textColor="@android:color/white"
            android:text="@string/login_button"/>
    </LinearLayout>

</LinearLayout>