<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:onClick="onChatClicked"
            android:gravity="center_vertical"
            android:background="@drawable/btn_main">
            <ImageView
                android:layout_width="@dimen/button_icon_size"
                android:layout_height="@dimen/button_icon_size"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_marginEnd="@dimen/icon_horizontal_margin"
                android:src="@drawable/ic_chat"/>
            <TextView
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_button"
                android:textFontWeight="@integer/roboto_medium"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:onClick="onLoginClicked"
            android:gravity="center_vertical"
            android:background="@drawable/btn_main">
            <ImageView
                android:layout_width="@dimen/button_icon_size"
                android:layout_height="@dimen/button_icon_size"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_marginEnd="@dimen/icon_horizontal_margin"
                android:src="@drawable/ic_lock"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textFontWeight="@integer/roboto_medium"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:onClick="onAnimationClicked"
            android:gravity="center_vertical"
            android:background="@drawable/btn_main">
            <ImageView
                android:layout_width="@dimen/button_icon_size"
                android:layout_height="@dimen/button_icon_size"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_marginEnd="@dimen/icon_horizontal_margin"
                android:src="@drawable/ic_animation"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation_button"
                android:textFontWeight="@integer/roboto_medium"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
